Fix on clipboard indicator and copied! position
If you copy your site password to the clipboard, the logo and tooltip change as an alert.  If you then copy your userid, the alert should clear but it wasn't.

I also moved copied! a few pixels to the right so it wouldn't overlap the label on the site password field.

--- a/src/ssp.css
+++ b/src/ssp.css
@@ -370,6 +370,7 @@ button:enabled:active {
 .copied {
   color: #d51c24;
   top: 2px;
+  right: -5px;
   font-size: 10pt;
 }
 #sitepwcopy:active {
